--- a/css/stylesheet-01.css
+++ b/css/stylesheet-01.css
@@ -22,7 +22,7 @@ body {
 
 .grid-item-1 {
   background-color: linen;
-  border-radius: ;
+  /* border-radius: ; */
 }
 
 .grid-item-2 {
@@ -31,7 +31,7 @@ body {
 
 .grid-item-3 {
   background-color: linen;
-  border-radius: ;
+  /* border-radius: ; */
 }
 
 /** GRID ITEM 1 **/
@@ -39,7 +39,7 @@ body {
 .blog-banner {
   margin: 25px 0;
   text-align: center;
-  font-size: 100px;
+  font-size: 50px;
 }
 
 /** GRID ITEM 2 **/
@@ -49,18 +49,18 @@ body {
   margin: 10px;
   border: 5px black solid;
   border-radius: 50%;
-  width: 450px;
+  width: 300px;
   background-color: white;
   text-align: center;
 }
 
 .blog-intro {
-  font-size: 35px;
+  font-size: 25px;
   margin: 25px;
 }
 
 .recent-posts-title {
-  font-size: 50px;
+  font-size: 25px;
   margin: 50px;
 }
 
@@ -68,6 +68,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 55px 0;
 }
 
 .post-pic-1 {
@@ -87,7 +88,7 @@ body {
 }
 
 .recent-post-1 {
-  width: 400px;
+  width: 300px;
   border: 2px black solid;
   border-radius: 10px;
   margin: 10px;
@@ -95,7 +96,7 @@ body {
 }
 
 .recent-post-2 {
-  width: 400px;
+  width: 300px;
   border: 2px black solid;
   border-radius: 10px;
   margin: 10px;
@@ -112,7 +113,7 @@ body {
   width: 100%;
   color: steelblue;
   text-align: left;
-  font-size: 30px;
+  font-size: 25px;
   font-style: italic;
 }
 
@@ -126,7 +127,6 @@ body {
   font-size: 25px;
   color: steelblue;
   cursor: pointer;
-
 }
 
 a:link .post-button {
@@ -158,7 +158,7 @@ ul {
 
 li {
   padding: 0 10px;
-  font-size: 40px;
+  font-size: 16px;
   font-weight: bold;
   color: hotpink;
 }
@@ -192,13 +192,105 @@ li {
 /** MEDIA QUERIES **/
 
 @media(min-width: 1025px) {
-  li {
-  padding: 0 10px;
-  font-size: 25px;
-  font-weight: bold;
-  color: hotpink;
+
+  .blog-banner {
+    margin: 25px 0;
+    text-align: center;
+    font-size: 100px;
   }
-  
+
+  .avatar {
+    padding: 10px;
+    margin: 10px;
+    border: 5px black solid;
+    border-radius: 50%;
+    width: 450px;
+    background-color: white;
+    text-align: center;
+  }
+
+  .blog-intro {
+    font-size: 35px;
+    margin: 25px;
+  }
+
+  .recent-posts-title {
+    font-size: 50px;
+    margin: 50px;
+  }
+
+  .recent-posts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .post-pic-1 {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: auto;
+    border-radius: 10px 10px 0 0;
+    background-color: white;
+  }
+
+  .post-pic-2 {
+    width: 100%;
+    height: auto;
+    border-radius: 10px 10px 0 0;
+    background-color: white;
+  }
+
+  .recent-post-1 {
+    width: 400px;
+    border: 2px black solid;
+    border-radius: 10px;
+    margin: 10px;
+    background-color: linen;
+  }
+
+  .recent-post-2 {
+    width: 400px;
+    border: 2px black solid;
+    border-radius: 10px;
+    margin: 10px;
+    background-color: linen;
+  }
+
+  .post-extras {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .post-title {
+    margin: 10px 10px 0 10px;
+    width: 100%;
+    color: steelblue;
+    text-align: left;
+    font-size: 30px;
+    font-style: italic;
+  }
+
+  .post-button {
+    padding: 5px;
+    margin: 10px 10px;
+    border: 1px black solid;
+    border-radius: 10px;
+    width: 150px;
+    height: 45px;
+    font-size: 25px;
+    color: steelblue;
+    cursor: pointer;
+
+  }
+
+  li {
+    padding: 0 10px;
+    font-size: 25px;
+    font-weight: bold;
+    color: hotpink;
+  }
+
   .list {
     display: flex;
     justify-content: space-between;
