--- a/css/stylesheet-02.css
+++ b/css/stylesheet-02.css
@@ -22,7 +22,7 @@ body {
 
 .grid-item-1 {
   background-color: linen;
-  border-radius: ;
+  /* border-radius: ; */
 }
 
 .grid-item-2 {
@@ -31,7 +31,7 @@ body {
 
 .grid-item-3 {
   background-color: linen;
-  border-radius: ;
+  /* border-radius: ; */
 }
 
 /** GRID ITEM 1 **/
@@ -39,7 +39,7 @@ body {
 .blog-banner {
   margin: 25px 0;
   text-align: center;
-  font-size: 100px;
+  font-size: 50px;
 }
 
 /** GRID ITEM 2 **/
@@ -49,7 +49,7 @@ body {
   margin: 10px;
   border: 5px black solid;
   border-radius: 50%;
-  width: 450px;
+  width: 250px;
   background-color: white;
   text-align: center;
 }
@@ -57,18 +57,19 @@ body {
 .blog-entry-title {
   margin: 15px 0;
   text-align: center;
-  font-size: 50px;
+  font-size: 30px;
   font-weight: bold;
   color: black;
 }
 
 .blog-entry-content {
   padding: 0 0 10px 0;
-  margin: 0 25px;
+  margin: 0 10px;
   max-width: 100%;
   height: auto;
-  text-align: left;
-  font-size: 25px;
+  text-align: center;
+  font-size: 20px;
+  line-height: 2;
 }
 
 .blog-entry-content p {
@@ -84,7 +85,7 @@ body {
   padding: 2px 0;
   margin: 5px 0 5px 20px;
   text-align: center;
-  font-size: 25px;
+  font-size: 20px;
   color: black
 }
 
@@ -96,7 +97,7 @@ ul {
 
 li {
   padding: 0 10px;
-  font-size: 40px;
+  font-size: 16px;
   font-weight: bold;
   color: hotpink;
 }
@@ -130,13 +131,64 @@ li {
 /** MEDIA QUERIES **/
 
 @media(min-width: 1025px) {
-  li {
-  padding: 0 10px;
-  font-size: 25px;
-  font-weight: bold;
-  color: hotpink;
+
+  .blog-banner {
+    margin: 25px 0;
+    text-align: center;
+    font-size: 100px;
   }
-  
+
+  .blog-pic {
+    padding: 10px;
+    margin: 10px;
+    border: 5px black solid;
+    border-radius: 50%;
+    width: 450px;
+    background-color: white;
+    text-align: center;
+  }
+
+  .blog-entry-title {
+    margin: 15px 0;
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    color: black;
+  }
+
+  .blog-entry-content {
+    padding: 0 0 10px 0;
+    margin: 0 25px;
+    max-width: 100%;
+    height: auto;
+    text-align: left;
+    font-size: 25px;
+  }
+
+  .blog-entry-content p {
+    margin: 0 0 25px 0;
+  }
+
+  .blog-entry-content ul {
+    padding: 10px 0;
+    list-style: none;
+  }
+
+  .blog-entry-content li {
+    padding: 2px 0;
+    margin: 5px 0 5px 20px;
+    text-align: center;
+    font-size: 25px;
+    color: black
+  }
+
+  li {
+    padding: 0 10px;
+    font-size: 25px;
+    font-weight: bold;
+    color: hotpink;
+  }
+
   .list {
     display: flex;
     justify-content: space-between;
